--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   dio: ^4.0.0
   get_it: ^7.6.4
   vocsy_epub_viewer: ^2.0.0
-
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
