--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   vocsy_epub_viewer: ^2.0.0
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
+  permission_handler: ^11.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
